fixed layout issues but saving a copy

--- a/css/contact/contact.scss
+++ b/css/contact/contact.scss
@@ -116,10 +116,14 @@ nav{
 }
 
 form {
-    margin: 0 auto;
-    margin-top: 50px;
-    width: 270px;
-    padding: 19px;
+   // display: inline-block;
+   //margin-top: 50px;
+   // width: 270px;
+   // padding: 19px;
+   //gets this to center for us
+   max-width: 420px;
+   margin: auto;
+  // background: #2196f3;
   }
   .inputs .block {
     padding-left: 5px;
@@ -128,6 +132,7 @@ form {
   .inputs .block .firstNameLabel {
     color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float:left;
   }
   
   .inputs .block .firstNameInput {
@@ -147,6 +152,7 @@ form {
   .inputs .block .lastNameLabel {
     color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float:left;
   }
   
   .inputs .block .lastNameInput {
@@ -166,6 +172,7 @@ form {
   .inputs .block .emailAddressLabel {
     color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float:left;
   }
   
   .inputs .block .emailAddressInput {
@@ -185,6 +192,7 @@ form {
   .inputs .block .contactNumberLabel {
     color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float:left;
   }
   
   .inputs .block .contactNumberInput {
@@ -205,6 +213,7 @@ form {
   .inputs .block .messageLabel {
     color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    float:left;
   }
   
   .inputs .block .messageInput {
@@ -262,6 +271,10 @@ form {
     width:100%;
     text-align: center;
 }
+.column2{
+  width: 50%;
+  text-align: center;
+}
   .column2, iframe{
 
     width:250px;
@@ -301,7 +314,7 @@ form {
 }
 
 //this is used for larger screen sizes 
-@media only screen and (min-width: 1064px){
+@media only screen and (min-width: 1494px){
     //hides the hamburger icon ---------------
     .menu-btn{
         display: none;
@@ -351,25 +364,39 @@ form {
 
     .container2{
         text-align: center;
-        width:65%;
+        
     }
     .container2, .contact-us{
         text-align: center;
         margin-left: 17.5%;
         margin-right: 17.5%;
     }
+    .container3{
+      position: relative;
+    }
     .column1{
-        margin-left: 10%;
-        float: left;
+        width: 70%;
+      text-align: center;
+    }
+    .container4{
+      width: 70%;
+      float: right;
+      position: relative;
+      margin-top: -500px;
     }
     .column2, iframe{
-        margin-right: 5%;
-        margin-top: 20%;
-        width: 700px;
+        //width: 700px;
         height: 400px;
+        
+   // float: right;
+   // text-align: center;
+  //  max-width: 420px;
+   margin: auto;
+   // padding: 10px;
+   
     }
     .row0{
-        margin-top: -20%;
+     
         margin-bottom: 300px;
     }
     .foot
@@ -399,6 +426,27 @@ form {
 
     
     }
-    @media only screen and (min-width: 1188px){
-
+    @media only screen and (min-width: 646px){
+      
+      .row2{
+        display: flex;
+      }
+      .column2, iframe{
+        //width: 800px;
+        //height: 400px;
+        min-width: 600px;
+        min-height: 300px;
+      }
+      .inputs .block .firstNameInput{
+        width:200px;
+    }
+    .inputs .block .lastNameInput{
+     width:200px;
+ }
+ .inputs .block .emailAddressInput{
+  width:300px;
+}
+ .inputs .block .messageInput{
+  width:400px;
+}
     }
